# nowide-standalone

./: CMakeLists.txt  README.md
nowide/: config.hpp
src/: iostream.cpp
